infrastructure/apps/coder/ingress-demo.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "https://coder.${CODER_WILDCARD_DOMAIN}/templates/coder/iipod-privileged/workspace"
  name: coder-default
  namespace: coder
spec:
  ingressClassName: nginx
  rules:
    - host: "demo.${CODER_WILDCARD_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: coder
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - secretName: wildcard-tls
      hosts:
        - "*.${CODER_WILDCARD_DOMAIN}"
